# halva

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
src/halva/: __init__.py  inference.py
